EPBDS-15993 Improve project resolving strategy in REST API (#1690)